@@ -1,3 +1,7 @@
+2013-01-11  Niibe Yutaka  <gniibe@fsij.org>
+
+	* tool/pinpadtest.py: Add fixed length input.
+
 2012-12-25  Niibe Yutaka  <gniibe@fsij.org>
 
 	* tool/rsa.py: New.
